--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@
         let x = document.getElementsByClassName("t-change")[0];
         x.innerText="비즈니스 회원 가입 시 업체 미니홈을 통해 기업 정보를 확인의 메리트는 사용자 입장에서 정보를 읽기 힘들다고 느껴, 정보전달에 강점을 가졌으며 하누스 기존 디자인에서의 확장을 고려하여 카드형 UI 형태로 리뉴얼 하였습니다."; 
         let y = document.getElementsByClassName("r-images")[0];
-        y.style.backgroundImage="url(image/minihome.png)";
+        y.style.backgroundImage="url(./image/minihome.png)";
         }
 
         function uploadpage() {
         let x = document.getElementsByClassName("t-change")[0];
         x.innerText="기존 하누스는 사이트 유입 시 대메뉴가 메인페이지로 설정되어 있으며, 해당 메뉴명은 하누스에서만 사용하는 고유 언어로 신규유저에게 혼돈을 줄 수 있으며, 사이트의 서비스 내용을 내포한 메인페이지가 필요하다고 판단하여 메인페이지를 기획 및 디자인 하게 되었습니다"; 
         let y = document.getElementsByClassName("r-images")[0];
-        y.style.backgroundImage="url(image/uploadpage.png)";
+        y.style.backgroundImage="url(https://realhighpark.github.io/realhighpark2023/image/uploadpage.png)";
         }
 
 
