--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <!-- <li>Project</li> -->
             <!-- <li>Service</li> -->
             <a href="#"><li class="logo"></li></a>
-            <!-- <li>About</li> -->
-            <!-- <li>Content</li> -->
+            <!-- <li>노션 구경하기</li> -->
+            <!-- <li><span>반응형 준비중</span></li> -->
         </ul>
     </div>
 
