--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
         <div class="a-content">
             <h2>고생이 많으십니다,</h2>
             <span>소통</span>
-            <h6>좋은 소통은 능률 향상과 좋은 아웃풋을 만들어 낸다고 생각하며, 고등학생 시절부터의 여러 
-                아르바이트와 직장을 통해 많은 사람들을 만나 존중하는 소통 방법을 가졌습니다</h6>
+            <h6>좋은 소통은 능률 향상과 좋은 아웃풋을 만들어 낸다고 생각합니다. 고등학생 시절부터의 여러 
+                아르바이트와 직장을 통해 많은 사람들을 만나 존중하는 소통 방법을 익혔습니다</h6>
             <span>가치관</span>
             <h6>좋은 일과 나쁜 일, 좋은 사람과 나쁜 사람을 판단할 순 없지만, 모든 경험과 사람에겐 
                 배울점이 있다고 생각하며 성장합니다. 배움과 성장을 위해 지식을 쌓는 것에 
@@ -163,7 +163,7 @@
     </div>
 
     <footer>
-        본 사이트는 포트폴리오의 목적을 가지고 있으며, 저작권은 당사자인 박상진에게 있습니다.<br>
+        본 사이트는 포트폴리오의 목적으로 제작되었으며, 저작권은 당사자에게 있습니다.<br>
         Copyright 2023. Park Sangjin All rights reserved.
     </footer>
 
