--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                     <a href="image/mh.pdf" target="_blank">
                     <h5>Open PDF</h5></a>
                     <a href="https://realhighpark.notion.site/be622e23826b433db17cad77cdf8ba87" target="_blank">
-                    <h6>노션 정리(+프로토타입) 〉</h6>
+                    <h6>노션 정리 〉</a>
+                    <a href="https://www.figma.com/proto/JEqxmIzvjAvvUMtrgbFLTy/Mohyeang?node-id=45%3A430&starting-point-node-id=168%3A1331&scaling=scale-down" target="_blank">
+                    <span>프로토타입</span></a></h6>
                 </div>
             </div>
         </div>
@@ -54,7 +56,9 @@
                     <a href="image/bc.pdf" target="_blank">
                     <h5>Open PDF</h5></a>
                     <a href="https://realhighpark.notion.site/Bear-Cave-76db862e6777400d946c418d95d42ea1" target="_blank">
-                    <h6>노션 정리(+프로토타입) 〉</h6></a>
+                    <h6>노션 정리 〉</a>
+                    <a href="https://www.figma.com/proto/kdnELwgPEp0b96GWKTqHNM/Bear-Cave?node-id=2%3A2&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=2%3A2" target="_blank">
+                    <span>프로토타입</span></a></h6>
                 </div>
             </div>
         </div>
@@ -72,12 +76,30 @@
                 <div class="c-content">
                     <div class="c-inner">
                         <img src="image/c-fir.png">
+                        <div class="c-inner-g">
+                            <div class="c-inner-b">
+                                <a href="https://hanuus.com/event/join_attl.html" target="_blank">
+                                <span>Open Link</span></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="c-inner">
                         <img src="image/c-sec.png">
+                        <div class="c-inner-g">
+                            <div class="c-inner-b">
+                                <a href="https://hanuus.com/event/kia2.html" target="_blank">
+                                <span>Open Link</span></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="c-inner">
                         <img src="image/c-thi.png">
+                        <div class="c-inner-g">
+                            <div class="c-inner-b">
+                                <a href="https://hanuus.com/event/join_materials.html" target="_blank">
+                                <span>Open Link</span></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
