--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <!-- 1-메인페이지리뉴얼 -->
             <span>리뉴얼</span>
             <h1>더 나은 방향 제안</h1>
-            <h5>개인과 조직의 발전이 가장 이상적이며 좋은 방향성이라 생각하고<br>
+            <h5>개인과 조직의 발전이 가장 이상적이며 좋은 방향성이라 생각하고
             기존 웹의 불편함과 문제점을 찾아 개편을 시도했습니다</h5>
             <div class="r-line"></div>
             <h6><span class="t-change">기존 하누스는 사이트 유입 시 대메뉴인 '건축모델'이 메인페이지로
@@ -197,20 +197,20 @@
         //     document.querySelector('.c-box-cover').style.transform = 'translate(-960px)';
         // });
         function btn1() {
-        let x = document.getElementsByClassName("c-box-cover")[0];
+        let x = document.getElementsByClassName("c-content")[0];
         x.style.transform = "translate(0px)";
         // let y = document.getElementsByClassName("btn1c")[0];
         // y.style.color = "#fff";
         }
         function btn2() {
-        let x = document.getElementsByClassName("c-box-cover")[0];
-        x.style.transform = "translate(-960px)";
+        let x = document.getElementsByClassName("c-content")[0];
+        x.style.transform = "translate(-33%)";
         // let y = document.getElementsByClassName("btn2c")[0];
         // y.style.color = "#fff";
         }
         function btn3() {
-        let x = document.getElementsByClassName("c-box-cover")[0];
-        x.style.transform = "translate(-1920px)";
+        let x = document.getElementsByClassName("c-content")[0];
+        x.style.transform = "translate(-66%)";
         // let y = document.getElementsByClassName("btn3c")[0];
         // y.style.color = "#fff";
         }
